#2480 - Align user avatar in the post composer correctly

--- a/src/components/RichTextArea/RichTextArea.scss
+++ b/src/components/RichTextArea/RichTextArea.scss
@@ -18,7 +18,7 @@
 
     .modal-row {
       display: flex;
-      padding: 0 2 * $base-unit;
+      padding: 0 4 * $base-unit;
 
       .object {
         flex-grow: 1;
